  can use the OCaml runtime.
  (Gabriel Scherer, review by Xavier Leroy, report by Brahima Dibassi)

- #10809: Use the WSA_FLAG_NO_HANDLE_INHERIT on Windows when creating
  sockets with WSASocket if the cloexec (non-inheritable) parameter is
  true. Fixes a race condition where a child process could inherit the
  socket and deadlock the parent.
  (Antonin Décimo, review by Xavier Leroy)

- #11186, #11188: Fix composition of coercions with aliases
  (Vincent Laviron, report and review by Leo White)

- #11194, #11609: Fix inconsistent type variable names in "unbound type var"
  messages
  (Ulysse Gérard and Florian Angeletti, review Florian Angeletti and
   Gabriel Scherer)

- #11204: Fix regression introduced in 4.14.0 that would trigger Warning 17 when
  calling virtual methods introduced by constraining the self type from within
  the class definition.
  (Nicolás Ojeda Bär, review by Leo White)

- #11263, #11267: caml/misc.h: check whether `_MSC_VER` is defined before using
  it to ensure that the headers can always be used in code which turns on
  -Wundef (or equivalent).
  (David Allsopp and Nicolás Ojeda Bär, review by Nicolás Ojeda Bär and
   Sébastien Hinderer)

- #11289, #11405: fix some leaks on systhread termination
  (Fabrice Buoro, Enguerrand Decorne, Gabriel Scherer,
   review by Xavier Leroy and Florian Angeletti, report by Romain Beauxis)

- #11314, #11416: fix non-informative error message for module inclusion
  (Florian Angeletti, report by Thierry Martinez, review by Gabriel Scherer)

- #11358, #11379: Refactor the initialization of bytecode threading,
  This avoids a "dangling pointer" warning of GCC 12.1.
  (Xavier Leroy, report by Armaël Guéneau, review by Gabriel Scherer)

- #11387, module type with constraints no longer crash the compiler in presence
  of both shadowing warnings and the `-bin-annot` compiler flag.
  (Florian Angeletti, report by Christophe Raffalli, review by Gabriel Scherer)
