@@ -620,8 +620,7 @@ Line 9, characters 0-25:
 Error: The type abbreviation foo is cyclic:
          'a foo = 'a foo list,
          'a foo list contains 'a foo,
-         'a foo = 'a foo list,
-         'a foo list contains 'a foo
+         'a foo = 'a foo list
 |}];;
 
 class ['a] bar (x : 'a) = object end
@@ -913,10 +912,10 @@ type t = u and u = t;;
 Line 1, characters 0-10:
 1 | type t = u and u = t;;
     ^^^^^^^^^^
-Error: The definition of t contains a cycle:
-         u = t,
+Error: The type abbreviation t is cyclic:
          t = u,
-         u = t
+         u = t,
+         t = u
 |}];;
 
 (* PR#8188 *)
@@ -1033,7 +1032,7 @@ Line 1, characters 0-83:
 1 | type ('a1, 'b1) ty1 = 'a1 -> unit constraint 'a1 = [> `V1 of ('a1, 'b1) ty2 as 'b1]
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Error: The definition of ty1 contains a cycle:
-         [> `V1 of ('a, 'b) ty2 as 'b ] as 'a contains 'b
+         ([> `V1 of 'a ] as 'b, 'a) ty2 as 'a contains 'a
 |}];;
 
 (* PR#8359: expanding may change original in Ctype.unify2 *)
