@@ -1,7 +1,7 @@
 File "pr5026_bad.ml", line 11, characters 0-36:
 11 | type -'typing wrapped = private sexp
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: The definition of wrapped contains a cycle:
+Error: The type abbreviation wrapped is cyclic:
+         'a wrapped = sexp,
          sexp = untyped wrapped,
-         untyped wrapped = sexp,
-         sexp = untyped wrapped
+         untyped wrapped = sexp
