@@ -4,5 +4,4 @@ File "pr5343_bad.ml", line 11, characters 2-14:
 Error: The type abbreviation u is cyclic:
          u = u t,
          u t contains u,
-         u = u t,
-         u t contains u
+         u = u t
